# Hackathon1-humanoids-robotics-book

./: FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  README_CHATBOT.md  REUSABILITY.md  STATUS_REPORT.md  package-lock.json  package.json  reusable-intelligence-system-part2.md  temp_config.txt  validate_system.py
.claude/agents/: backend-intelligence-agent.md  book-system-orchestrator.md  frontend-doc-architect.md
.claude/skills/: agent_orchestration_logic.md  docusaurus_chapter_template.md  fastapi_backend_blueprint.md  frontend_ai_integration.md  rag_context_control.md  (+1 more)
backend/: main.py  requirements.txt
physical-ai-robotics-textbook/: AUTH_IMPLEMENTATION.md  CHANGELOG.md  DEPLOYMENT_PLAN.md  POST-DEPLOYMENT-MONITORING.md  README.md  SECURITY_VALIDATION.md  SUBMISSION_CHECKLIST.md  SUCCESS_METRICS_VERIFICATION.md  TRANSLATION_GUIDE.md  main.py  package-lock.json  package.json
physical-ai-robotics-textbook/personalization-backend/: .gitignore  README.md  main.py  pyproject.toml
physical-ai-robotics-textbook/personalization-backend/api/personalize/: chapter.py
physical-ai-robotics-textbook/personalization-backend/models/: personalization.py
physical-ai-robotics-textbook/personalization-backend/services/: ai_personalization.py  error_handler.py  markdown_chunker.py
physical-ai-robotics-textbook/personalization-backend/templates/ai/: personalization_prompt.txt
physical-ai-robotics-textbook/personalization-backend/tests/: test_personalization_integration.py
scripts/: generate-translations.js  translation-prompt.txt  validate-translations.js
(+814 files in other folders)
